# chess_colab_2022

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
Piece/: piece.py
chess/: __main__.py
chess/Board/: board.py  boardTest.py  boardtestharness.py  space.py
chess/Game/: game.py  game_main.py
chess/Piece/: bishop.py  helper.py  king.py  knight.py  pawn.py  piece.py  queen.py  rook.py  test_pawn.py
chess/Player/: player.py
chess/gui/: MainWindow.ui  app.py  board_gui.py  main_gui.py  main_menu.py  main_window.py  space_gui.py
src/Board/: board.py  space.py
src/Piece/: bishop.py  helper.py  king.py  knight.py  pawn.py  piece.py  rook.py
src/chess/Piece/: bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
