[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "chess_collab_2022"
readme = "README.md"
dynamic = ["version"]
#dependencies = []

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["chess*"]

[tool.setuptools.dynamic]
#version = {attr = "chess.VERSION"}