[build-system]
requires = [
	 "setuptools",
	 "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "chess"
readme = "README.md"
dynamic = ["version"]
# requires-python = ">=3.10"
dependencies = [
	     "pytest",
		 "pygame"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
#where = ["chess"]  # ["."] by default
include =[
	"chess",
	"chess*"
]

[tool.setuptools.dynamic]
#version = {attr = "chess.VERSION"}

[project.scripts]
# test-board = "chess.Piece.test_pawn:test_pawn"
